--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,13 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/workflow?useSSL=false&useUnico
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-biz.file.path=E:/home/file/
+biz.file.path=${user.home}/file/
 #html template
 spring.thymeleaf.cache=false
 #mybatis
 mybatis.type-aliases-package=com.workflow.entity
 mybatis.mapperLocations=classpath*:**/*Mapper.xml
-mapper.mappers=com.workflow.common.mybatis
+mapper.mappers=com.workflow.common.mybatis.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
 pagehelper.helperDialect=mysql
