--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jackson.time-zone=GMT+8
 #file
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/workflow?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/workflow?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT&nullCatalogMeansCurrent=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -34,4 +34,11 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count\=countSql
 spring.cache.type=simple
-
+#activiti配置
+#表示启动时检查数据库表，不存在则创建
+spring.activiti.database-schema-update=true
+#Activiti记录历史任务数据级别，full是最全的，方便日后查询使用
+spring.activiti.history-level=full
+spring.activiti.database-schema=
+#创建数据库历史数据表
+spring.activiti.db-history-used=true
