流程配置 [自动建表]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.profiles.active=dev
 #log
-logging.level.com.flowable.oa.core.dao=DEBUG
-logging.level.org.flowable.engine.impl=debug
+logging.level.com.workflow.dao=DEBUG
+logging.level.org.activiti.engine.impl=debug
 logging.config=classpath:logback.xml
 spring.http.converters.preferred-json-mapper=jackson
 spring.jackson.default-property-inclusion=NON_ABSENT
